--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -277,6 +277,8 @@
 				<string>AMD Radeon RX 6600M</string>
 				<key>applbkl</key>
 				<integer>3</integer>
+				<key>unfairgva</key>
+				<data>AQAAAA==</data>
 			</dict>
 			<key>PciRoot(0x1)/Pci(0x2,0x4)/Pci(0x0,0x0)</key>
 			<dict>
@@ -1604,7 +1606,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 debug=0x100 agdpmod=pikera applbkl=3</string>
+				<string>-v keepsyms=1 debug=0x100 agdpmod=pikera applbkl=3 -radcodec</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>run-efi-updater</key>
