--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1644,7 +1644,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 debug=0x12a msgbuf=1048576 io=0xff -liludbgall -dbgenhdbg -dbgenhiolog agdpmod=pikera utbwait=30</string>
+				<string>-v keepsyms=1 debug=0x100 -liludbgall -dbgenhdbg agdpmod=pikera utbwait=30</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>run-efi-updater</key>
