--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1660,7 +1660,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 debug=0x100 -liludbgall -dbgenhdbg agdpmod=pikera -utbacpioff</string>
+				<string>-v keepsyms=1 debug=0x100 -liludbgall -dbgenhdbg agdpmod=pikera -utboff</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>run-efi-updater</key>
